# JiPP-2

./: CMakeLists.txt
FirstClass/: CMakeLists.txt
FirstClass/src/: FirstClass.cpp  FirstClass.h  main.cpp
Matrix/src/: main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt  lib.cpp  lib.h
firstLib/include/: CMakeLists.txt  lib.h
firstLib/src/: main.cpp
firstLibCall/: CMakeLists.txt
firstLibCall/src/: main.cpp
gameProject/: CMakeLists.txt
gameProject/include/: Card.h  MagicCard.h  MeleeCard.h  RangedCard.h
gameProject/src/: Card.cpp  MagicCard.cpp  MeleeCard.cpp  RangedCard.cpp  main.cpp
lab10/: CMakeLists.txt
lab10/include/: CsvException.h
lab10/src/: CsvException.cpp  main.cpp
lab11/: CMakeLists.txt
lab11/src/: main.cpp
lab12/: CMakeLists.txt
lab12/src/: main.cpp
lab2/: CMakeLists.txt
lab2/include/: CMakeLists.txt  lib2.h
lab2/src/: lib2.cpp  main.cpp
lab4/: CMakeLists.txt
lab4/src/: Cuboid.cpp  Cuboid.h  Figura.cpp  Figura.h  FunkcjaKwadratowa.cpp  FunkcjaKwadratowa.h  Punkt.cpp  Punkt.h  Sphere.cpp  Sphere.h  Student.cpp  Student.h  main.cpp
lab5/: CMakeLists.txt
lab5/include/: Pojazd.h
lab5/src/: Pojazd.cpp  main.cpp
lab5_example/include/: Point.h
lab5_example/src/: Point.cpp
lab6/: CMakeLists.txt
lab6/include/: Imaginary.h  Vector.h
lab6/src/: Imaginary.cpp  Vector.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: Scheduler.h  Task.h
lab8/: CMakeLists.txt
matrixApp/: CMakeLists.txt
matrixLib/: CMakeLists.txt  matrixLib.cpp  matrixLib.h
simpleCalc/: CMakeLists.txt
(+17 files in other folders)
